[gd_scene load_steps=3 format=3 uid="uid://duyiw6k2q4jd5"]

[ext_resource type="Script" uid="uid://b85bwrc8raine" path="res://Scenes/ObjectBase.gd" id="1_iobnl"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_iobnl"]

[node name="ObjectBase" type="Node2D"]
script = ExtResource("1_iobnl")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_iobnl")

[connection signal="child_exiting_tree" from="." to="." method="_on_child_exiting_tree"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
